--- a/src/index.html
+++ b/src/index.html
@@ -1,17 +1,14 @@
-
 <!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale-1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="css/mystyles.css">
+    <!-- <link rel="stylesheet" href="css/mystyles.css"> -->
     <!-- <script defer src="bundle.js"></script> -->
   </head>
   <body>
-    <section class="section">
-      <div id="app"></div>
-      <script src="bundle.js"></script>
-    </section>
+    <div id="app"></div>
+    <script src="bundle.js"></script>
   </body>
 </html>
