--- a/src/index.html
+++ b/src/index.html
@@ -5,10 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <!-- <link rel="stylesheet" href="css/mystyles.css"> -->
-    <!-- <script defer src="bundle.js"></script> -->
   </head>
   <body>
     <div id="app"></div>
-    <script src="bundle.js"></script>
+    <!-- <script src="bundle.js"></script> -->
   </body>
 </html>
