--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <div id="app"></div>
+    <!-- <div id="new-review-modal-root"></div> -->
     <!-- <script src="bundle.js"></script> -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/glider-js/1.7.5/glider.min.js" integrity="sha512-yae3h50zbnmT/1Lt5AsOAsFNCsLTYaUdQ05Y+i4jX37o2/oYbfrqxaUfNjgFvCeUCf6QJMHusgQGA7U9qBUxMQ==" crossorigin="anonymous"></script>
   </body>
