nearly completed new review

--- a/src/index.html
+++ b/src/index.html
@@ -11,5 +11,6 @@
     <!-- <div id="new-review-modal-root"></div> -->
     <!-- <script src="bundle.js"></script> -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/glider-js/1.7.5/glider.min.js" integrity="sha512-yae3h50zbnmT/1Lt5AsOAsFNCsLTYaUdQ05Y+i4jX37o2/oYbfrqxaUfNjgFvCeUCf6QJMHusgQGA7U9qBUxMQ==" crossorigin="anonymous"></script>
+    <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
   </body>
 </html>
